Project page finished

--- a/claudiu-ghise.de/HTML/projects.html
+++ b/claudiu-ghise.de/HTML/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Portfolio</title>
-    <link rel="stylesheet" href="/CSS/projects.css">
+    <link rel="stylesheet" href="/CSS/proj.css">
 </head>
 
 <body>
@@ -33,7 +33,6 @@
             <p>A password manager build using C# WPF and SQLite</p>
         </div>
     </div>
-
     <!-- Footer -->
     <div class="footer">
 
@@ -48,7 +47,6 @@
         </div>
     </div>
     <!--FOOTER END-->
-
     <script src="/JS/hamburger_btn.js"></script>
 </body>
 
