--- a/claudiu-ghise.de/HTML/password_manager.html
+++ b/claudiu-ghise.de/HTML/password_manager.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<!DOCTYPE html>
 <html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password manager</title>
-    <link rel="stylesheet" href="/CSS/password_manager.css">
+    <link rel="stylesheet" href="/CSS/pass-man.css">
 
 </head>
 
 <body>
 
-    <!-- Navigation bar -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-        </ul>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="logo"><img src="/Image/Claudiu_Ghise_100x40.png"></div>
+        <div class="nav-buttons">
+            <a href="/index.html" class="nav-btn">Home</a>
+            <a href="/HTML/projects.html" class="nav-btn">Projects</a>
+        </div>
+        <div class="menu-toggle">&#9776;</div> <!-- Hamburger Icon -->
     </nav>
-    <!-- Nav bar end -->
+    <!--NAVBAR END-->
 
     <!-- Description -->
-    <section class="alignement">
-        <div class="left">
+    <div class="main-content">
+        <div class="text">
             <h1>Offline Password Manager</h1>
             <p>My Offline Password Manager is a robust and secure application built using WPF and C#, with SQLite as
                 the
@@ -64,32 +64,29 @@
                     breaches of sensitive personal information resulting from the use of this application.</p>
             </h4>
         </div>
-        <div class="right">
+        <div class="pics">
             <div><img id="pm1" src="/Image/password_manager_pic1.png" alt="Login Page "></div>
             <div><img src="/Image/password_manager_pic2.png" alt="register page"></div>
             <div><img src="/Image/password_manager_pic3.png" alt=""></div>
         </div>
-    </section>
-
-
-
+    </div>
     <!-- Description end -->
 
+    <!-- Footer -->
+    <div class="footer">
 
-    <!-- Footer-->
-    <footer>
-        <div class="contact-div">
-            <a href="https://github.com/ClaudiuG18" target="_blank"><img src="/Image/github.png" alt="GitHub Logo"
-                    class="github-logo">GitHub</a>
+        <div class="git-logo">
+            <img src="/Image/github.png" alt="GitHub Logo">
         </div>
-        <div class="impressum-div">
-            <a href="impressum.html">Impressum | </a>&copy; 2024 Claudiu Ghise. Alle Rechte vorbehalten.
+        <div class="git-link">
+            <a href="https://github.com/ClaudiuG18" class="footer-link">GitHub</a>
         </div>
-    </footer>
-    <!-- Footer end -->
-
-
-
+        <div class="impress-div">
+            <a href="/HTML/impressum.html" class="footer-link">Impressum</a>
+        </div>
+    </div>
+    <!--FOOTER END-->
 </body>
+<script src="/JS/hamburger_btn.js"></script>
 
 </html>
