--- a/claudiu-ghise.de/HTML/projects.html
+++ b/claudiu-ghise.de/HTML/projects.html
@@ -20,7 +20,7 @@
     </nav>
     <!--NAVBAR END-->
     <div class="main">
-        <div class=project>
+        <div class=project-title>
             <h1>Projects</h1>
             <p>Below, you will see my recent projects</p>
         </div>
