changes made to the robo code reverted to the older stage

--- a/claudiu-ghise.de/HTML/projects.html
+++ b/claudiu-ghise.de/HTML/projects.html
@@ -36,6 +36,10 @@
             <h2> <a href="robo_buttons.html">Robo</a> </h2>
             <p>Control robot arm</p>
         </div>
+        <div class="project">
+            <h2> <a href="">Work in progress.. </a> </h2>
+            <p>More content will be available soon.</p>
+        </div>
     </div>
     <!-- Footer -->
     <div class="footer">
@@ -47,7 +51,7 @@
             <a href="https://github.com/ClaudiuG18" class="footer-link">GitHub</a>
         </div>
         <div class="impress-div">
-            <a href="HTML/impressum.html" class="footer-link">Impressum</a>
+            <a href="/HTML/impressum.html" class="footer-link">Impressum</a>
         </div>
     </div>
     <!--FOOTER END-->
