--- a/robo.claudiu-ghise.de/index.html
+++ b/robo.claudiu-ghise.de/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/CSS/robo.css">
+  <link rel="manifest" href="manifest.json">
   <title>Servo Control Panel</title>
 </head>
 
@@ -42,6 +43,7 @@
   </div>
 
   <script src="/JS/robo_with_buttons.js"></script>
+
 
 </body>
 
