--- a/robo.claudiu-ghise.de/index.html
+++ b/robo.claudiu-ghise.de/index.html
@@ -43,7 +43,19 @@
   </div>
 
   <script src="/JS/robo_with_buttons.js"></script>
-
+  <script>if ("serviceWorker" in navigator) {
+      navigator.serviceWorker
+        .register("/sw.js")
+        .then((registration) => {
+          console.log("Service Worker registered with scope:", registration.scope);
+        })
+        .catch((error) => {
+          console.error("Service Worker registration failed:", error);
+        });
+    } else {
+      console.error("Service Worker is not supported in this browser.");
+    }
+  </script>
 
 </body>
 
